@@ -1,3 +1,12 @@
+2007-11-12  Petr Ovtchenkov  <complement@users.sourceforge.net>
+
+	* test/unit/fstream_test.cpp: testcase for bug #1830513;
+	__read_unbuffered wrongly process valid streamsize 0;
+	[was derived from original report of Anton Samokhvalov and Oleg Obolenskiy]
+
+	* stlport/stl/_istream.c: fix for bug #1830513 above;
+	check boundary condition in the beginning of loop.
+
 2007-10-21  Francois Dumont  <dums@users.sourceforge.net>
 
 	* src/allocators.cpp: Add missing const_cast in lock free
